--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^3.4.2",
     "element-ui": "^2.13.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.0.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "mysql": "^2.18.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
     "vue": "^2.6.11",
     "vue-loader": "14.2.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.1",
@@ -32,6 +36,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "autoPack": "webpack-dev-server --open --port 3500 --contentBase src --hot"
+    "autoPack": "webpack-dev-server --open --port 3500 --contentBase src --hot",
+    "newAutoPack": "webpack-dev-server"
   }
 }
