--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "autoPack": "webpack-dev-server --open --port 3500 --contentBase src --hot",
-    "newAutoPack": "webpack-dev-server"
+    "autoPack": "webpack-dev-server --open --port 3500 --contentBase src --hot"
   }
 }
