--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.13.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mysql": "^2.18.1",
@@ -36,6 +37,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "autoPack": "webpack-dev-server --open --port 3500 --contentBase src --hot"
+    "autoPack": "webpack-dev-server --open --port 3500  --contentBase src --hot"
   }
 }
